🚀: Github 🍪 build test

--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "bugs": {
         "url": "https://github.com/pphatdev/cookies/issues"
     },
+    "publishConfig": {
+        "registry": "https://npm.pkg.github.com"
+    },
     "homepage": "https://github.com/pphatdev/cookies#readme",
     "keywords": [
         "cookies",
