--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
       - name: setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: [16.x, 18.x, 20.x]
+          node-version: 16.x
           registry-url: 'https://npm.pkg.github.com'
       - name: install
         run: npm install
