--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,8 +19,10 @@ jobs:
           registry-url: 'https://npm.pkg.github.com'
       - name: install
         run: npm install
-      - name: test
-        run: npm test
+
+      - name: build
+        run: npm run build
+
       # Publish to npm if this version is not published
       - name: Publish
         run: |
