--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "url": "https://github.com/pphatdev/cookies/issues"
     },
     "publishConfig": {
-        "registry": "https://registry.npmjs.org/",
+        "registry": "https://npm.pkg.github.com",
         "access": "public"
     },
     "homepage": "https://github.com/pphatdev/cookies#readme",
