--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
     "name": "@sophat/cookies",
-    "version": "0.0.1",
+    "version": "0.0.1-beta",
     "description": "This project provides a set of utility functions for interacting with browser cookies. The `Cookies` class offers methods to set, get, update, remove, and clear cookies, as well as retrieve all cookie keys.",
     "main": "dist/index.js",
     "type": "module",
     "scripts": {
         "build": "tsc",
-        "test": "jest --config jest.config.ts",
         "prepare": "npm run build"
     },
     "repository": {
