--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: "16.x"
           registry-url: "https://npm.pkg.github.com"
-          scope: "@pphatdev"
+          scope: "@sophat"
 
       - name: Install dependencies
         run: npm ci
