--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Setup Node
+      # Publish to GitHub Packages
+      - name: Setup Node for GitHub Packages
         uses: actions/setup-node@v3
         with:
           node-version: "16.x"
@@ -34,6 +35,24 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.GH_TOKEN }}
 
       - name: Publish to GitHub Packages
-        run: npm publish
+        run: |
+          npm pkg set name="@pphatdev/cookies"
+          npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GH_TOKEN }}
+
+      # Publish to NPM
+      - name: Setup Node for NPM
+        uses: actions/setup-node@v3
+        with:
+          node-version: "16.x"
+          registry-url: "https://registry.npmjs.org"
+          scope: "@sophat"
+
+      - name: Publish to NPM
+        run: |
+          npm pkg set name="@sophat/cookies"
+          echo "//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}" > .npmrc
+          npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
