--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,10 @@
 name: 🍪
 
 on:
-  push:
-    branches: [master]
+  # push:
+  #   branches: [master]
+  release:
+    types: [created]
 
 jobs:
   publish:
