--- a/package.json
+++ b/package.json
@@ -38,7 +38,13 @@
         "cookie-setter",
         "cookie-getter"
     ],
+    "peerDependencies": {
+        "react": ">=16.8.0",
+        "react-dom": ">=16.8.0"
+    },
     "devDependencies": {
+        "@types/react": "^18.0.0",
+        "@types/react-dom": "^18.0.0",
         "@types/node": "^22.10.7",
         "ts-node": "^10.9.2",
         "typescript": "^5.7.3"
