--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
     "name": "@sophat/cookies",
-    "version": "0.2.1",
+    "version": "0.2.2",
     "description": "This project provides a set of utility functions for interacting with browser cookies. The `Cookies` class offers methods to set, get, update, remove, and clear cookies, as well as retrieve all cookie keys.",
-    "main": "dist/index.js",
+    "main": "./dist/index.js",
+    "exports": {
+        ".": "./dist/index.js",
+        "./hooks": "./dist/hooks/useCookies.js"
+    },
     "type": "module",
     "scripts": {
         "build": "tsc",
