--- a/package.json
+++ b/package.json
@@ -1,54 +1,35 @@
 {
-    "name": "@sophat/cookies",
-    "version": "0.2.3",
-    "description": "This project provides a set of utility functions for interacting with browser cookies. The `Cookies` class offers methods to set, get, update, remove, and clear cookies, as well as retrieve all cookie keys.",
-    "main": "./dist/index.js",
-    "exports": {
-        ".": "./dist/index.js",
-        "./hooks": "./dist/hooks/useCookies.js",
-        "./cookie": "./dist/cookie/index.js",
-        "./windows": "./dist/windows/CookiesWindow.js"
-    },
-    "type": "module",
-    "scripts": {
-        "build": "tsc",
-        "prepare": "npm run build"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/pphatdev/cookies.git"
-    },
-    "author": "pphatdev <info.sophat@gmail.com>",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/pphatdev/cookies/issues"
-    },
-    "publishConfig": {
-        "registry": "https://npm.pkg.github.com",
-        "access": "public"
-    },
-    "homepage": "https://github.com/pphatdev/cookies#readme",
-    "keywords": [
-        "cookies",
-        "browser-cookies",
-        "cookie-management",
-        "web-storage",
-        "javascript-cookies",
-        "typescript",
-        "cookie-utility",
-        "cookie-handler",
-        "browser-storage",
-        "client-storage",
-        "web-cookies",
-        "cookie-parser",
-        "cookie-setter",
-        "cookie-getter"
-    ],
-    "devDependencies": {
-        "@types/react": "^18.0.0",
-        "@types/react-dom": "^18.0.0",
-        "@types/node": "^22.10.7",
-        "ts-node": "^10.9.2",
-        "typescript": "^5.7.3"
-    }
+  "name": "my-app",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-dropdown-menu": "^2.1.5",
+    "@radix-ui/react-menubar": "^1.1.5",
+    "@radix-ui/react-select": "^2.1.5",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@tailwindcss/postcss": "^4.0.0",
+    "@tanstack/react-table": "^8.20.6",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.474.0",
+    "next": "15.1.6",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^4.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "postcss": "^8",
+    "typescript": "^5"
+  }
 }
