--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,33 @@
 {
-    "ts-node": {
-        "compilerOptions": {
-            "module": "CommonJS"
-        }
-    },
-    "compilerOptions": {
-        "target": "ES2020",
-        "module": "ESNext",
-        "lib": ["DOM", "ES2020"],
-        "outDir": "./dist",
-        "rootDir": "./src",
-        "strict": true,
-        "esModuleInterop": true,
-        "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true,
-        "declaration": true,
-        "moduleResolution": "node",
-        "sourceMap": false,
-        "baseUrl": ".",
-        "paths": {
-            "@utils/*": ["src/utils/*"],
-            "@types/*": ["src/types/*"],
-            "@interfaces/*": ["src/interfaces/*"],
-        }
-    },
-    "include": ["src/**/*"],
-    "exclude": ["node_modules", "dist", "tests"]
+  "compilerOptions": {
+    "target": "ES2017",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "bundler",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "preserve",
+    "incremental": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
+    "paths": {
+      "@/*": ["./src/*"],
+      "@sophat/*": ["./src/@sophat/*"],
+      "@sophat/cookies": ["./src/@sophat/cookies"],
+      "@components/*": ["./src/components/*"],
+      "@ui/*": ["./src/components/ui/*"],
+      "@app/*": ["./src/app/*"],
+      "@lib/*": ["./src/libs/*"],
+    }
+  },
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "exclude": ["node_modules"]
 }
