--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,8 @@ jobs:
       contents: read
     steps:
       - uses: actions/checkout@v3
+      - name: Change directory
+        run: cd src/@sophat/cookies
 
       # Publish to GitHub Packages
       - name: Setup Node for GitHub Packages
