--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,10 @@
 name: 🍪
 
 on:
-  # push:
-  #   branches: [master]
-  release:
-    types: [created]
+  push:
+    branches: [master]
+  # release:
+  #   types: [created]
 
 jobs:
   publish:
@@ -14,22 +14,14 @@ jobs:
       contents: read
     steps:
       - uses: actions/checkout@v3
-      - name: Change directory
-        run: cd src/@sophat/cookies
-
-      # Publish to GitHub Packages
-      - name: Setup Node for GitHub Packages
-        uses: actions/setup-node@v3
-        with:
-          node-version: "16.x"
-          registry-url: "https://npm.pkg.github.com"
-          scope: "@pphatdev"
 
       - name: Install dependencies
         run: npm ci
+        working-directory: ./src/@sophat/cookies
 
       - name: Build
         run: npm run build
+        working-directory: ./src/@sophat/cookies
 
       - name: Configure GitHub Packages
         run: |
@@ -37,6 +29,7 @@ jobs:
           echo "//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}" >> .npmrc
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GH_TOKEN }}
+        working-directory: ./src/@sophat/cookies
 
       - name: Publish to GitHub Packages
         run: |
@@ -44,8 +37,8 @@ jobs:
           npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GH_TOKEN }}
+        working-directory: ./src/@sophat/cookies
 
-      # Publish to NPM
       - name: Setup Node for NPM
         uses: actions/setup-node@v3
         with:
@@ -60,3 +53,4 @@ jobs:
           npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        working-directory: ./src/@sophat/cookies
